--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/main.scss" />
-    <title>EBAC Tech Talks</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
+  <title>EBAC Tech Talks</title>
   <body>
     <header class="hero">
       <div class="container">
@@ -17,6 +20,24 @@
         <p class="hero__text">
           O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s.
         </p>
+
+        <div class="infos-bar">
+          <ul class="infos-bar__infos">
+            <li class="infos-bar__infos__item">
+              <b>Localização</b>
+              Allianz Parque - Barra Funda - São Paulo
+            </li>
+            <li class="infos-bar__infos__item">
+              <b>Preço</b>
+              A partir de R$ 120,00
+            </li>
+            <li class="infos-bar__infos__item">
+              <b>Quando</b>
+              12/12/2022 ãs 19hs
+            </li>
+          </ul>
+          <a href="#" class="button button--primary"> Garanta a sua vaga </a>
+        </div>
       </div>
     </header>
 
