--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,20 @@
       </div>
     </header>
 
+    <section class="event">
+      <div class="container">
+        <div class="event__details">
+          <h2 class="event__details__title">Front-end</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            architecto dignissimos sequi iusto ipsa optio inventore quam magni
+            aliquam modi ex assumenda recusandae reiciendis tenetur quos quidem
+            commodi, vitae officia.
+          </p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+      </div>
+    </section>
     <script src="scripts/main.js"></script>
   </body>
 </html>
