--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <title>EBAC Tech Talks</title>
   <body>
@@ -41,8 +42,8 @@
       </div>
     </header>
 
-    <section class="event">
-      <div class="container">
+    <section class="event event--frontend">
+      <div class="container" data-aos="fade-right">
         <div class="event__details">
           <h2 class="event__details__title">Front-end</h2>
           <p class="event__details__description">
@@ -55,6 +56,51 @@
         <img class="event__image" src="./images/frontend.png" alt="Front-end" />
       </div>
     </section>
+    <section class="event event--ux-ui event--image-left">
+      <div class="container" data-aos="fade-left">
+        <div class="event__details">
+          <h2 class="event__details__title">UX-UI</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            architecto dignissimos sequi iusto ipsa optio inventore quam magni
+            aliquam modi ex assumenda recusandae reiciendis tenetur quos quidem
+            commodi, vitae officia.
+          </p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+      </div>
+    </section>
+
+    <section class="event event--data-science">
+      <div class="container" data-aos="fade-right">
+        <div class="event__details">
+          <h2 class="event__details__title">Data Science</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            architecto dignissimos sequi iusto ipsa optio inventore quam magni
+            aliquam modi ex assumenda recusandae reiciendis tenetur quos quidem
+            commodi, vitae officia.
+          </p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+      </div>
+    </section>
+
+    <section class="event event--backend event--image-left">
+      <div class="container" data-aos="fade-left">
+        <div class="event__details">
+          <h2 class="event__details__title">Back-end</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            architecto dignissimos sequi iusto ipsa optio inventore quam magni
+            aliquam modi ex assumenda recusandae reiciendis tenetur quos quidem
+            commodi, vitae officia.
+          </p>
+        </div>
+        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+      </div>
+    </section>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
