--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             commodi, vitae officia.
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img class="event__image" src="./images/ui-ux.png" alt="Front-end" />
       </div>
     </section>
 
@@ -83,7 +83,7 @@
             commodi, vitae officia.
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img class="event__image" src="./images/data.png" alt="Front-end" />
       </div>
     </section>
 
@@ -98,7 +98,7 @@
             commodi, vitae officia.
           </p>
         </div>
-        <img class="event__image" src="./images/frontend.png" alt="Front-end" />
+        <img class="event__image" src="./images/backend.png" alt="Front-end" />
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
